--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,8 +47,13 @@ main {
 }
 
 #cart-btn {
-    font-size: 20px;
+    font-size: 20p x;
 }
+
+.container-cards {
+    margin-bottom: 5rem;
+}
+
 
 /* NAV */
 .nav {
@@ -361,5 +366,221 @@ body.dark-mode .footer-copyright-text {
 
     .footer-content-column {
         width: 24.99%;
+    }
+}
+
+
+:root {
+    --color-primary: #fa734e;
+    --color-primary-light: #f8cfc4;
+    --color-dark: #343a40;
+}
+
+main {
+    margin-top: 120px;
+}
+
+.contenido-index {
+    margin-left: 150px;
+    margin-right: 150px;
+
+}
+
+.presentacion {
+    display: flex;
+
+}
+
+.bienvenidos {
+    padding-top: 50px;
+}
+
+.benf {
+    padding-top: 20px;
+}
+
+.logo-container {
+    display: flex;
+    justify-content: center;
+    max-width: 100%;
+    height: auto;
+}
+
+.logo-icon {
+    width: 100px;
+}
+
+.logo-icon2 {
+    width: 100px;
+}
+
+.logo-icon3 {
+    width: 80px;
+}
+
+.logo-icon4 {
+    width: 80px;
+}
+
+.logo-container {
+    display: flex;
+
+    /* Asegura que los elementos estén uno debajo del otro */
+}
+
+.logo-1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* Centra horizontalmente los elementos */
+    text-align: center;
+    /* Alinea el texto al centro */
+    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-left: 100px;
+    margin-right: 100px;
+
+    /* Espacio entre cada logo y texto */
+}
+
+.logo-icon4 {
+
+    filter: brightness(0);
+    /* Convierte la imagen a completamente negra */
+}
+
+.logo-icon,
+.logo-icon2,
+.logo-icon3,
+.logo-icon4 {
+    width: 8rem;
+    /* Ajusta el ancho de las imágenes según tu diseño */
+    height: 8rem;
+    /* Ajusta la altura de las imágenes según tu diseño */
+    /* Añade cualquier otro estilo necesario para las imágenes */
+}
+
+.logo-text {
+    margin-top: 10px;
+
+    /* Espacio entre la imagen y el texto */
+    /* Otros estilos para el texto */
+}
+
+
+
+
+.contenido-index span {
+    color: var(--color-primary);
+}
+
+.presentacion img {
+    border-radius: 100%;
+    width: 100%;
+
+}
+
+.logo-container {
+    padding-top: 10px;
+    padding-bottom: 50px;
+}
+
+.salas {
+    text-align: center;
+}
+
+.card {
+    display: inline-block;
+    width: 350px;
+    /* Ancho aumentado de las tarjetas */
+    border: 1px solid #ccc;
+    margin: 10px;
+    /* Espacio exterior de las tarjetas */
+    padding: 10px;
+    transition: 0.4s;
+}
+
+.card img {
+    width: 100%;
+    /* Imágenes ocupan el 100% del ancho de las tarjetas */
+    height: auto;
+}
+
+.card h2 {
+    font-size: 25px;
+    margin: 10px 0;
+    text-align: center;
+}
+
+.card p {
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.5);
+    text-align: center;
+}
+
+.card:hover {
+    transform: scale(1.03);
+    transition: 0.5s;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+/* Agregar espacio entre las tarjetas */
+.container-cards {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    /* Permite que las tarjetas se envuelvan a una nueva línea si no caben todas en una sola fila */
+}
+
+
+
+.responsive-img {
+    max-width: 100%;
+    height: auto;
+}
+
+
+/* OSCURO */
+body.dark-mode .card {
+    background-color: var(--color-dark);
+}
+
+body.dark-mode .card h2 {
+    color: white;
+
+}
+
+body.dark-mode .card p {
+    color: rgba(239, 239, 239, 0.5);
+}
+
+body.dark-mode .logo-icon {
+    filter: invert(100%) sepia(100%) saturate(0) hue-rotate(108deg);
+}
+
+body.dark-mode .logo-icon2 {
+    filter: invert(100%) sepia(100%) saturate(0) hue-rotate(108deg);
+}
+
+body.dark-mode .logo-icon3 {
+    filter: invert(100%) sepia(100%) saturate(0) hue-rotate(108deg);
+}
+
+body.dark-mode .logo-icon4 {
+
+    filter: brightness(100);
+    /* Convierte la imagen a completamente negra */
+}
+
+body.dark-mode i:hover {
+    color: #bbbbbb;
+}
+
+
+@media(max-width:781px) {
+    body {
+        margin-top: 220px;
+        margin-left: -100px;
+        margin-right: -100px;
     }
 }
